Agendaを削除できるのは、そのAgendaの作者もしくはそのAgendaに紐づいているTeamの作者（オーナー）のみに設定

--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -30,18 +30,19 @@
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <% @working_team.agendas.each do |agenda| %>
           <li class="nav-item has-treeview menu-open row">
-            <a href="#" class="nav-link col-md-7">
+            <a href="#" class="nav-link col-md-8" style="padding-left:0; margin-right:8px;">
               <i class="fa fa-circle-o nav-icon"></i>
               <p>
                 <%= agenda.title %>
                 <i class="right fa fa-angle-left"></i>
               </p>
             </a>
-
-            <p class = "col-md-1"></p>
-            <%= button_to '削除', agenda_path(agenda.id), method: :delete, class: "nav-link col-md-3" %>
-            <p class = "col-md-1"></p>
-
+            <%= link_to '削除',
+                agenda_path(agenda.id),
+                method: :delete,
+                class:"nav-link col-md-3",
+                style:"font-size:13px; padding-top:10px; text-align:center;"
+                %>  
             <ul class="nav nav-treeview" style="display: block;">
               <% agenda.articles.each do |article| %>
                 <li class="nav-item">
